# fir

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Test.fir  build.rs  build_site  cloc_lang_def.txt  justfile  peg_test.txt  test  test.txt
Compiler/: Assert.fir  Ast.fir  Ast2.fir  AstVisitor.fir  AstWalker.fir  CompilerAst.fir  Defs.fir  DeriveEq.fir  DeriveToDoc.fir  DeriveUtils.fir  Error.fir  Grammar.fir  Grammar.peg  Grammar2.fir  Grammar2.peg  Interpolation.fir  Interpolation2.fir  Lexer.fir  Main.fir  Module.fir  NameResolver.fir  NewGrammarTest.fir  ParseUtils.fir  ParseUtils2.fir  Parser.fir  Program.fir  Scanner.fir  ScopeMap.fir  TcTy.fir  Token.fir  TypeCheck.fir
Fir/: Array.fir  C.fir  Char.fir  Deque.fir  HashMap.fir  HashSet.fir  Iter.fir  List.fir  Num.fir  Option.fir  PPrint.fir  Prelude.fir  Result.fir  RowToList.fir  Str.fir  StrBuf.fir  Vec.fir
Tests/: AndOrEvaluation.fir  AnonRecordInArraySccBug.fir  ArithmeticExpressions.fir  ArrayIter.fir  ArrayReverse.fir  ArraySlice1.fir  ArraySlice2.fir  AssignFail1.fir  AssignValBug.fir  AssocFnClosures.fir  AssocFnClosuresGeneric.fir  AssocFnMethodNameConflict1.fir  AssocFnMethodNameConflict2.fir  AssocFnParentNameCheck.fir  AssocFnSelectConTyArgsFail1.fir  AssocFnSelectFail.fir  AssocTyKindsFail.fir  AssocTys1.fir  AssocTys10.fir  AssocTys12.fir  AssocTys13.fir  AssocTys14.fir  AssocTys15.fir  AssocTys16.fir  AssocTys17.fir  AssocTys18.fir  AssocTys20.fir  AssocTys21.fir  AssocTys4.fir  AssocTys8.fir  AssocTys9.fir  AssocTys9_3.fir  AssocTysFail1.fir  AssocTysFail2.fir  AssocTysFail3.fir  AssocTysFail4.fir  AssocTysFail5.fir  AssocTysFail6.fir  AssocTysFail7.fir  AttributeParsing.fir  (+193 more)
benchmarks/: ParseAllFiles.fir  ParseAllFilesOld.fir
compiler/: Assert.fir  Ast.fir  AstPrinter.fir  DeriveEq.fir  Error.fir  ExprGrammarTest.fir  (+35 more)
(+658 files in other folders)
