[package]
name = "fir"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fir"
path = "bin/fir.rs"

[dependencies]
bytemuck = "1.16.0"
clap = { version = "4.5.27", default-features = false, features = ["std", "string", "help", "error-context", "usage", "suggestions"] }
console_error_panic_hook = "0.1.7"
fnv = "1.0.7"
indoc = "2.0.5"
lalrpop-util = "0.20.2"
lazy_static = "1.4.0"
lexgen = "0.16.0"
lexgen_util = "0.16.0"
ordermap = "0.5.5"
rustc_tools_util = "0.4.0"
smol_str = "0.2.2"
wasm-bindgen = "0.2"

[build-dependencies]
rustc_tools_util = "0.4.0"

[profile.release]
panic = "abort"
